// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Styled(div)>
  <h3>
    <div
      className="badge"
    >
      hotspots.status_option.TO_REVIEW
    </div>
  </h3>
  <span>
    hotspots.status_option.TO_REVIEW.description
  </span>
</Styled(div)>
`;

exports[`should render correctly: with title 1`] = `
<Styled(div)>
  <h3>
    status: 
    <div
      className="badge"
    >
      hotspots.status_option.TO_REVIEW
    </div>
  </h3>
  <span>
    hotspots.status_option.TO_REVIEW.description
  </span>
</Styled(div)>
`;
